# lute

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  TODO.md  Taskfile.yml
connector/bolt/: Cargo.toml  build.rs
connector/bolt/src/: client.rs  main.rs
connector/graph/: pyproject.toml
connector/graph/graph/: api.py  db.py  logger.py  lute.py  main.py  models.py  settings.py
connector/graph/notebooks/: fastrp.ipynb
connector/postgres/: Cargo.toml
connector/postgres/migrations/2023-08-16-231625_events/: down.sql  up.sql
connector/postgres/migrations/2023-08-17-055127_artists/: down.sql  up.sql
connector/postgres/migrations/2023-08-18-235309_albums/: down.sql  up.sql
connector/postgres/src/: lib.rs  main.rs  models.rs  schema.rs
core/: Cargo.toml  Dockerfile  Dockerfile.arm  build.rs
core/migrations/001-events/: down.sql  up.sql
core/migrations/002-event-subscriber-cursors/: down.sql  up.sql
core/migrations/003-drop-event-subscriber-cursor-stream-field/: down.sql  up.sql
core/migrations/004-albums/: down.sql  up.sql
core/migrations/005-event-subscriber/: down.sql  up.sql
core/migrations/006-album-related-indexes/: down.sql  up.sql
core/migrations/007-key-value-store/: down.sql  up.sql
core/migrations/008-scheduler/: down.sql  up.sql
core/migrations/009-scheduler-job-claims/: down.sql  up.sql
core/migrations/010-scheduler-job-priority/: down.sql  up.sql
core/migrations/011-scheduler-job-created-at/: down.sql  up.sql
core/migrations/012-event-key/: down.sql  up.sql
core/migrations/013-album-spotify-id/: up.sql
core/migrations/014-album-spotify-id/: down.sql
core/migrations/014-scheduler-indexes/: down.sql  up.sql
core/migrations/015-scheduler-priority-index/: down.sql  up.sql
core/migrations/016-kv-expires-at-index/: down.sql  up.sql
core/migrations/017-document-store/: down.sql  up.sql
core/migrations/018-list-lookup/: down.sql  up.sql
core/migrations/019-list-segment-root-file-name-index/: down.sql  up.sql
core/migrations/020-list-lookup-status/: down.sql  up.sql
core/resources/test/: album.html  album_search_result.html  artist.html  chart.html  list_segment.html
core/src/: context.rs  db.rs  file.rs  lib.rs  log.rs  main.rs  ops.rs  proto.rs  redis.rs  rpc.rs  settings.rs  sqlite.rs  telemetry.rs  tracing.rs
core/src/albums/: album_collection_summary.rs  album_event_subscribers.rs  album_interactor.rs  album_read_model.rs  album_read_model_repository.rs  album_repository.rs  album_search_index.rs  album_service.rs  artists.rs  embedding_provider.rs  es_album_search_index.rs  mod.rs  redis.rs  redis_album_read_model_repository.rs  redis_album_repository.rs  redis_album_search_index.rs  sqlite_album_repository.rs
core/src/albums/embedding_provider/: cache.rs  helpers.rs  mod.rs  onehot.rs  openai.rs  provider.rs  voyageai.rs
core/src/artists/: artist_event_subscribers.rs  artist_interactor.rs  artist_read_model.rs  artist_repository.rs  artist_search_index.rs  artist_service.rs  mod.rs
core/src/crawler/: crawler.rs  crawler_event_subscriber.rs  crawler_interactor.rs  crawler_jobs.rs  crawler_service.rs  crawler_state_repository.rs  crawler_worker.rs  mod.rs  priority_queue.rs  redis_priority_queue.rs
core/src/embedding_provider/: embedding_migration_subscriber.rs  embedding_provider_event_subscribers.rs  embedding_provider_interactor.rs  embedding_provider_jobs.rs  mod.rs  provider.rs
core/src/embedding_provider/providers/: mod.rs  ollama.rs  openai.rs  voyageai.rs
core/src/events/: event.rs  event_bus.rs  event_publisher.rs  event_repository.rs  event_service.rs  event_stream.rs  event_subscriber.rs  event_subscriber_jobs.rs  event_subscriber_repository.rs  mod.rs  redis_event_subscriber_repository.rs  sqlite_event_subscriber_repository.rs
core/src/files/: file_content_store.rs  file_event_subscribers.rs  file_interactor.rs  file_service.rs  mod.rs
core/src/files/file_metadata/: file_metadata.rs  file_metadata_repository.rs  file_name.rs  file_timestamp.rs  mod.rs  page_type.rs
core/src/helpers/: async_utils.rs  batch_loader.rs  bounded_min_heap.rs  db.rs  document_store.rs  elasticsearch_index.rs  embedding.rs  fifo_queue.rs  item_with_factor.rs  key_value_store.rs  math.rs  mod.rs  priority.rs  quantile_rank.rs  redisearch.rs  statistics.rs  test.rs
core/src/helpers/document_store/: document_filter.rs  document_store.rs  mod.rs
core/src/lookup/: album_search_lookup.rs  album_search_lookup_event_subscribers.rs  album_search_lookup_repository.rs  file_processing_status.rs  lookup_event_subscribers.rs  lookup_interactor.rs  lookup_service.rs  mod.rs
core/src/lookup/album_search/: album_search_lookup.rs  album_search_lookup_event_subscribers.rs  album_search_lookup_repository.rs  mod.rs
core/src/lookup/list/: list_lookup.rs  list_lookup_event_subscribers.rs  list_lookup_interactor.rs  list_lookup_repository.rs  list_segment_repository.rs  mod.rs
core/src/parser/: album.rs  album_search_result.rs  artist.rs  chart.rs  dom.rs  failed_parse_files_repository.rs  list_segment.rs  mod.rs  parse.rs  parsed_file_data.rs  parser.rs  parser_event_subscribers.rs  parser_failure_repository.rs  parser_jobs.rs  parser_service.rs  retry.rs  util.rs
core/src/profile/: mod.rs  profile.rs  profile_event_subscribers.rs  profile_interactor.rs  profile_repository.rs  profile_service.rs  profile_summary.rs  spotify_import_event_subscribers.rs  spotify_import_lookup_subscription.rs  spotify_import_repository.rs
core/src/recommendations/: mod.rs  quantile_rank_assessment.rs  quantile_rank_interactor.rs  recommendation_event_subscribers.rs  recommendation_interactor.rs  recommendation_jobs.rs  recommendation_service.rs  seed.rs  spotify_track_search_index.rs  types.rs
core/src/recommendations/embedding_similarity/: mod.rs  (+1 more)
core/src/rpc/: handlers.rs  mod.rs  server.rs
core/src/scheduler/: job_name.rs  mod.rs  scheduler.rs  scheduler_repository.rs  scheduler_service.rs
core/src/spotify/: mod.rs  spotify_client.rs  spotify_credential_repository.rs  spotify_service.rs
proto/: lute.proto
(+178 files in other folders)
