[package]
name = "lute"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-openai = "0.19.0"
async-stream = "0.3.5"
async-trait = "0.1.72"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.14.0"
data-encoding = "2.4.0"
deadpool-sqlite = "0.8.1"
derive_builder = "0.20.0"
dotenv = "0.15.0"
elasticsearch = "8.15.0-alpha.1"
futures = "0.3.30"
governor = "0.6.3"
htmlescape = "0.3.1"
include_dir = "0.7.3"
iter_tools = "0.7.0"
lazy_static = "1.4.0"
mimalloc = "0.1.39"
nonzero = "0.2.0"
num-traits = "0.2.16"
ollama-rs = "0.2.1"
opentelemetry = { version = "0.22.0" }
opentelemetry-otlp = { version = "0.15.0" }
opentelemetry_sdk = "0.22.1"
ordered-float = { version = "4.1.0" }
prost = "0.12.0"
prost-build = "0.12.0"
rayon = "1.7.0"
regex = "1.8.3"
reqwest = { version = "0.12.9", features = ["json"] }
reqwest-middleware = "0.4.0"
reqwest-tracing = "0.5.4"
rspotify = { git = "https://github.com/shedrachokonofua/rspotify.git" }
rusqlite = { version = "0.31.0", features = ["array", "bundled", "chrono"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
rust-s3 = "0.34.0-rc4"
rustis = { version = "0.13.3", features = [
  "pool",
  "redis-json",
  "redis-search",
] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
serde_repr = "0.1.19"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
strsim = "0.11.1"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
thiserror = "1.0.58"
tl = "0.7.7"
tokio = { version = "1.28.1", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }
tokio-retry = "0.3.0"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tonic-tracing-opentelemetry = "0.18.2"
tonic-web = "0.11.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.17", features = [
  "fmt",
  "json",
  "env-filter",
] }
ulid = { version = "1.0.0", features = ["serde"] }
unidecode = "0.3.0"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.0"
