[package]
name = "lute-bolt-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.74"
async-stream = "0.3.5"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
futures = "0.3.28"
neo4rs = "0.6.2"
prost = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
tonic = "0.10.0"

[build-dependencies]
prost-build = "0.12.0"
tonic-build = "0.10.0"
