[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Shedrach Okonofua <shedrachokonofua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.64.1"
protobuf = "^5.27.2"
graphdatascience = "^1.10"
unidecode = "^1.3.8"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
grpcio-tools = "^1.64.1"
jupyterlab = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
graph = "graph.main:main"
