[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["Shedrach Okonofua <shedrachokonofua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.64.1"
protobuf = "^5.27.2"
graphdatascience = "^1.10"
unidecode = "^1.3.8"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
fastapi = "^0.111.1"
json-logging = "^1.3.0"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.64.1"
jupyterlab = "^4.2.5"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
graph = "graph.main:main"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
